# mypy-imprecision-action

./: LICENSE  Makefile  README.md  action.yml  compare_tip.py  extract_tip.py  pyproject.toml
.github/workflows/: post-commit.yml  self-test.yml
