[tool.poetry]
name = "mypy-imprecision-action"
version = "0.1.0"
description = " Perform a mypy check and compare Total Imprecission Percent with threshold and the base branch ."
authors = ["Daniel Moreno Medina <dani@photonbit.es>"]
repository = "https://github.com/photonbit/mypy-imprecision-action"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.4.1"
lxml = "^4.9.3"
pygithub = "^1.59.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.3.3"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 102
target-version = ['py310', 'py39', 'py38']
